Home page test change

--- a/LifeSongComposers/Views/Home/Index.cshtml
+++ b/LifeSongComposers/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="row">
         <div>
             <h1>Your Story, Your Song</h1>
-            <p class="lead">Choose to give the gift of a personalized song in three easy steps!</p>
+            <p class="lead">Choose to give the gift of a personalized song in three easy steps!!!</p>
         </div>
     </div>
     <div class="row">
